FIX: Fixed white space issue on post page

--- a/frontend/src/assets/css/output.css
+++ b/frontend/src/assets/css/output.css
@@ -821,6 +821,10 @@ video {
   white-space: nowrap;
 }
 
+.whitespace-pre-line {
+  white-space: pre-line;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
